@@ -48,6 +48,7 @@
 #include <fcntl.h>
 #include <unistd.h>
 #include <time.h>
+#include <errno.h>
 
 /*
  * BSD style utmp entry
